# devops-study-app

./: .pre-commit-config.yaml  mise.toml
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  frontend-tests.yaml
kubernetes/: e2e_test.py  setup_cluster_local
src/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/src/data/: sessions.csv
src/frontend/: CHANGELOG.md  Dockerfile  pyproject.toml
