[project]
name = "study-tracker-backend"
version = "0.0.0"
description = "Backend API for tracking study time for DevOps certifications"
readme = "README.md"
authors = [{ name = "Atik", email = "atik@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "ruff>=0.15.18",
    "uvicorn>=0.49.0",
]

[project.scripts]
study-tracker-api = "backend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
